--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         }
 
         .logo::before {
-            content: 'M_Marma>'; /* Personalized prompt */
+            content: 'Mongwoiching>'; /* Personalized prompt */
             color: var(--secondary);
             animation: blink 1.5s infinite;
             font-size: 0.9em; /* Slightly smaller than logo */
