--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                 <div class="hero-visual">
                     <div class="profile-card floating">
                         <div class="profile-image">
-                           <i class="fas fa-shield-crosshairs"></i>
+                           <i class="fas fa-user-secret"></i>
                         </div>
                         <h3 style="color: #00ff00; margin-bottom: 0.5rem; font-size:1.4rem;">Aspiring Pentester</h3>
                         <p style="color: rgba(0,255,0,0.9); font-size: 0.9rem;">Dhaka, Bangladesh</p>
